--- a/app/views/items/show.html.erb
+++ b/app/views/items/show.html.erb
@@ -9,11 +9,11 @@
       <%= image_tag @item.image, class: "item-img" if @item.image.attached? %>
 
       <%# 商品が売れていればsold outを表示しましょう %>
-          <%# <% if @item.purchase_records.present? %> 
-         <%# <div class='sold-out'> %>
-            <%# <span>Sold Out!!</span> %>
-          <%# </div> %>
-          <%# <% end %> 
+          <% if @item.purchase_records.present? %> 
+          <div class='sold-out'>
+            <span>Sold Out!!</span>
+          </div>
+          <% end %> 
           <%# //商品が売れていればsold outを表示しましょう %>
     </div>
     <div class="item-price-box">
@@ -34,7 +34,7 @@
     <%= link_to "削除", item_path(@item.id), data: {turbo_method: :delete}, class:"item-destroy" %>
 
     <% else %>
-    <%= link_to "購入画面に進む", "#" ,class:"item-red-btn"%>
+    <%= link_to "購入画面に進む", item_purchase_records_path(@item.id), data: { turbo: false }, class:"item-red-btn"%>
 
     <% end %>
     <% end %>
