--- a/app/views/items/show.html.erb
+++ b/app/views/items/show.html.erb
@@ -9,7 +9,7 @@
       <%= image_tag @item.image, class: "item-img" if @item.image.attached? %>
 
       <%# 商品が売れていればsold outを表示しましょう %>
-          <% if @item.purchase_records.present? %> 
+          <% if @item.purchase_record.present? %> 
           <div class='sold-out'>
             <span>Sold Out!!</span>
           </div>
@@ -25,7 +25,7 @@
       </span>
     </div>
 
- 
+    <% unless @item.purchase_record.present? %>
     <% if user_signed_in? %>
     <% if current_user.id == @item.user.id %>
 
@@ -36,6 +36,7 @@
     <% else %>
     <%= link_to "購入画面に進む", item_purchase_records_path(@item.id), data: { turbo: false }, class:"item-red-btn"%>
 
+    <% end %>
     <% end %>
     <% end %>
 
